# nefarious-parakeet

./: README.md  s101.cabal  servant-s101.cabal  stack.yaml
app/: Main.hs  S101Client.hs  S101Mock.hs  S101Server.hs
exec/: S101Client.hs  S101Mock.hs  S101Server.hs
src/: API spec.txt  Lib.hs  S101.hs
src/Servant/: S101.hs
