name:                s101
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable s101-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 0.8
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , http-types
                     , js-jquery
                     , lucid
                     , random
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-client
                     , text
                     , time
                     , transformers
                     , transformers-compat
                     , http-client
                     , wai
                     , warp
                     , either
                     , s101
  default-language:    Haskell2010

test-suite s101-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , s101
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
