name:                servant-s101
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.S101
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8
                     , bytestring
                     , directory
                     , http-types
                     , js-jquery
                     , lucid
                     , random
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-client
                     , servant-mock
                     , text
                     , time
                     , transformers
                     , transformers-compat
                     , http-client
                     , wai
                     , warp
                     , either
                     , QuickCheck
 default-language:    Haskell2010

executable s101-client
  hs-source-dirs:      exec
  main-is:             S101Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , transformers
                     , either
                     , optparse-applicative
                     , servant
                     , servant-server
                     , servant-client
                     , servant-s101
  default-language:    Haskell2010

executable s101-server-mock
  hs-source-dirs:      exec
  main-is:             S101Mock.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , text
                     , transformers
                     , QuickCheck
                     , either
                     , servant
                     , servant-s101
                     , servant-mock
                     , servant-server
                     , warp
  default-language:    Haskell2010

executable s101-server
  hs-source-dirs:      exec
  main-is:             S101Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , text
                     , transformers
                     , either
                     , servant
                     , servant-s101
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite s101-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-s101
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
